# postgres-store-analyzer

./: .env.example  .gitignore  README.md  pyproject.toml
docker/: docker-compose.yml  init.sql
src/: database.py  server.py
